StarterSet/force-app/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <label>Sample</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sample</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>