StarterSet/force-app/main/default/objects/Sample__c/fields/DetailURL__c.field-meta.xml
<CustomField>
    <fullName>DetailURL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_350, FIND(&quot;/services/Soap/&quot;, $Api.Partner_Server_URL_350)) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DetailURL</label>
    <type>Text</type>
</CustomField>