StarterSet/force-app/main/default/objects/Sample__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>承認ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未申請</fullName>
            </value>
            <value>
                <fullName>社内承認中</fullName>
            </value>
            <value>
                <fullName>社外承認中</fullName>
            </value>
            <value>
                <fullName>承認済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>