StarterSet/force-app/main/default/objects/Sample__c/fields/longtext__c.field-meta.xml
<CustomField>
    <fullName>longtext__c</fullName>
    <defaultValue>&quot;default&quot;</defaultValue>
    <label>longtext</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>