StarterSet/force-app/main/default/objects/Sample__c/recordTypes/TypeA.recordType-meta.xml
<RecordType>
    <fullName>TypeA</fullName>
    <active>true</active>
    <label>TypeA</label>
</RecordType>