StarterSet/force-app/main/default/objects/Sample__c/validationRules/aaa.validationRule-meta.xml
<ValidationRule>
    <fullName>aaa</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Field1__c ) =&quot;&quot;</errorConditionFormula>
    <errorDisplayField>Field1__c</errorDisplayField>
    <errorMessage>ｓｓｓｓ</errorMessage>
</ValidationRule>